refactor: use CloudEvent
